--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
   <header class="navbar navbar-fixed-top">
 	<div class="navbar-inner">
-		<div class="container">
-			<%= link_to 'Movie Tickets', root_path, id: "logo" %>
+		<div class="container", align="center">
+			<%= link_to 'Movie Tickets Online', root_path, id: "logo" %>
 			<nav>
 				<ul class="nav pull-right">
 					<li><%= link_to "Home",  root_path %></li>
@@ -10,5 +10,4 @@
 			</nav>
 		</div>
 	</div>
-
 </header>
