--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,14 +1,15 @@
 
 <% if current_user %>
-<a href= "movies/new" class="btn btn-primary btn-lg disabled">Add Movie</a>
+<a href= "movies/new" class="btn btn-primary btn-lg disabled">Add Movies</a>
 <% end %>
 <table id="table_style", align="right">
-            <div><tr>
-            <td><%= form_tag search_path do %></td>
-            <td><%= select :movie, :search, Movie.select("distinct place").collect(&:place), :prompt => "Select Place" %></td>
-            <td><%= submit_tag "Search", class: "btn btn-success", :place => nil %></td>
-            <% end %>
-            </tr>
+    <tr>
+        <td><%= form_tag search_path do %></td>
+        <td><%= select :movie, :search, Movie.select("distinct place").collect(&:place), :prompt => "Select Place" %></td>
+        <td><%= submit_tag "Search", class: "btn btn-success", :place => nil %></td>
+        <% end %>
+    </tr>
 </table>
+
 <%= render @movies %>
 
